--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.15",
     "yet-another-react-lightbox": "^3.21.3"
   },
   "devDependencies": {
